2010-02-17  Dominique Dumont  <domi.dumont@free.fr> v 0.643

	* lib/Config/Model/Backend/Yaml.pm: New backend to read and write
	YAML configuration files.

2010-02-05  Dominique Dumont  <domi.dumont@free.fr>

	* lib/Config/Model/CheckList.pm (set): buf fix: split input value
	to get the list of checked items.
	Migrated to Log4perl

2010-02-03  Dominique Dumont  <domi.dumont@free.fr>

	* lib/Config/Model/CheckList.pm: Fixed default and upstream
	default handling

2010-01-21  Dominique Dumont  <dominique.dumont@hp.com> v0.642

	* lib/Config/Model/WarpedNode.pm: added get_help to methods
	forwarded to Node object to avoid breaking the graphical model
	editor

2010-01-19  Dominique Dumont  <dominique.dumont@hp.com> v0.641

	* lib/Config/Model/Node.pm: Ported to Log4Perl (Tree::Node class)

	* lib/Config/Model/AutoRead.pm: Doc updates on plugin mechanism
	for read/write classes

	* lib/Config/Model/Value.pm: model example updates

	* lib/Config/Model/Dumper.pm (dump_tree): Correctly quote values
	in list elements

2009-12-01  Dominique Dumont  <dominique.dumont@hp.com>

	* lib/Config/Model/HashId.pm: Ported to
	Log4Perl (Tree::Element::Hash class)

2009-09-25  Dominique Dumont  <domi.dumont@free.fr>

	* lib/Config/Model/Instance.pm (write_back): Croak if no
	write_back callbacks were registered

2009-09-09  Dominique Dumont  <dominique.dumont@hp.com> v0.640

	* lib/Config/Model/WizardHelper.pm (new): Correctly scan list
	element.

2009-07-30  Dominique Dumont  <dominique.dumont@hp.com> v0.639

	* lib/Config/Model/WizardHelper.pm (leaf_element_cb): bug fix:
	scan correctly leaf elements of a hash.
	* lib/Config/Model/WizardHelper.pm: use Log4perl

2009-07-27  Dominique Dumont  <dominique.dumont@hp.com>

	* config-edit: Tk cosmetic improvement. Thanks to Jerome Quelin
	for the suggestion

	* lib/Config/Model/WarpedThing.pm (_do_warp): Use
	Log4Perl. Improved error message

	* lib/Config/Model/Searcher.pm (): replace prints with
	Log4perl. Fixed data structure bug
